apps/site/web/static/css/_schedule-v2.scss
/* ... */
.date-filter,
.direction-filter {
  display: flex;
  flex-direction: column;
}

.filter-button {
  @extend %button-primary-outline;
  @include clearfix();
  border-radius: $border-radius;
  display: block;
  height: 100%;
  position: relative;
  text-align: left;
  white-space: normal;

  @include hover-focus-active() {
    .filter-icon-border {
      border-color: $btn-primary-focus-color;
    }
  }
}

.filter-icon,
.filter-text {
  @include make-col();
  padding-left: 0;
  padding-right: 0;
}

.filter-text {
  float: left;
  max-width: 80%;
}

.filter-icon {
  align-items: center;
  display: flex;
  float: right;
  height: 100%;
}

.filter-icon-border {
  border: 1px solid $brand-primary;
  border-radius: 50%;
  height: 2rem;
  margin-bottom: 25%;
  margin-top: 25%;
  text-align: center;
  width: 2rem;

  i {
    height: 100%;
    line-height: 2rem;
    margin: -1px auto;
    text-align: center;
    vertical-align: middle;
  }
}

.filter-label {
  font-weight: bold;
  margin-bottom: $space-6;

  @include media-breakpoint-only(xs) {
    margin-bottom: $space-12;
  }
}

.inner-label {
  color: $body-color;
}

.date-filter {
  @include media-breakpoint-only(xs) {
    margin-bottom: $base-spacing;
  }
}

////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////
///// COMMUTER RAIL TIMETABLE
////////////////////////////////////////////////////////////////////////
////////////////////////////////////////////////////////////////////////

.schedule-v2-timetable-container {
  max-width: 100%;
  width: 100%;
  overflow-x: scroll;
  overflow-y: hidden;
}

.schedule-v2-timetable-hide-earlier .schedule-v2-timetable-time-col-earlier,
.schedule-v2-timetable-hide-later .schedule-v2-timetable-time-col-later {
  background-color: $white;
  color: $white;

  > .schedule-v2-timetable-time-text {
    display: none;
  }
}

.schedule-v2-timetable-hide-earlier .schedule-v2-timetable-header-col.schedule-v2-timetable-time-col-earlier,
.schedule-v2-timetable-hide-later .schedule-v2-timetable-header-col.schedule-v2-timetable-time-col-later {
  background-color: $brand-primary-darkest;
  color: $brand-primary-darkest;
}

.schedule-v2-timetable-col,
.schedule-v2-timetable-name-col,
.schedule-v2-timetable-header-col {
  padding: .5rem 1rem;

  @include media-breakpoint-up(md) {
    min-width: 9rem;
  }
}

.schedule-v2-timetable-col,
.schedule-v2-timetable-header-col {
  text-align: center;
}

.schedule-v2-timetable-col,
.schedule-v2-timetable-name-col:not(.schedule-v2-timetable-header-col) {
  background-color: $white;
}

.schedule-v2-timetable-header-col {
  background-color: $brand-primary-darkest;
  color: $white;
  font-weight: bold;
}

.schedule-v2-timetable-row:not(:last-child) {
  > :not(.schedule-v2-timetable-name-col) {
    // border on the bottom of every row except the last
    border-bottom: 1px solid $gray-lightest;
  }
}

.schedule-v2-timetable-name-col {
  text-align: left;
}

.schedule-v2-timetable-name {
  margin-right: $base-spacing-sm; // left scroll warning

  @include media-breakpoint-up(md) {
    margin-left: 2.5rem; // bubble
    margin-right: $base-spacing-lg; // left scroll warning
  }

  > i {
    display: inline;
  }
}

.schedule-v2-timetable-time-col {
  background-color: rgba($gray-lightest, .5);
  min-width: $base-spacing-sm;
  padding: $base-spacing-sm 0 0;
  text-align: center;

  @include media-breakpoint-up(md) {
    background-color: $gray-lightest;
    color: $gray-dark;
    min-width: $base-spacing-lg;
  }
}

.schedule-v2-timetable-time-col-earlier {
  height: 100%;
  position: absolute;
  right: 0;
  top: 0;
}

.schedule-v2-timetable-time-text {
  // scss-lint:disable DuplicateProperty
  display: none;
  font-size: $font-size-sm;
  font-weight: normal;
  left: $space-2;
  overflow: visible;
  position: absolute;
  right: $space-2;
  -webkit-text-orientation: sideways;
  text-orientation: sideways;
  top: $space-8;
  white-space: nowrap;
  -webkit-writing-mode: vertical-lr; // Safari
  writing-mode: tb-lr; // for IE
  writing-mode: vertical-lr; // for everything else
  z-index: $z-index-schedule-v2-timetable-time-text;

  @include media-breakpoint-up(md) {
    display: block;
  }

  .fa {
    padding-bottom: $base-spacing-sm;
    padding-top: $base-spacing-sm;
  }
}

.schedule-v2-timetable-time-col-earlier .schedule-v2-timetable-time-text {
  transform: rotate(180deg);
}

.route-row {
  > .route-row {
    // branch
    padding-left: 1rem;
  }
}

.route-green-bubble {
  display: inline-block;
  width: $icon-size * 1.5;
}

.route-holiday-info {
  li {
    margin-left: -$space-18;
  }
}

/// Schedule V2 direction buttons
.btn.schedule-v2-direction-btn {
  display: table-cell;
  float: none;
  font-size: 1rem;
  padding-bottom: 1rem;
  padding-top: .75rem;
  text-align: left;
  vertical-align: top;
  white-space: normal;
  width: 50%;
}

.schedule-v2-direction-btn-group {
  display: table;
  margin-bottom: .75rem;
  width: 100%;
}

.schedule-v2-direction-btn-selected-icon {
  @include pull-left();
  display: block;
  font-size: 1.7rem;
  padding-right: .333rem;
}

.schedule-v2-direction-btn-label {
  @include pull-left();
  display: block;
  max-width: 90%;
  padding-left: .5rem;

  @include media-breakpoint-up(xs) {
    max-width: 70%;
  }
}

.schedule-v2-direction-btn-label-selected {
  font-weight: bold;
}

.schedule-v2-timetable-trip-message {
  color: $brand-commuter-rail;
  font-weight: bold;
}

.prediction-tooltip {
  margin: 0;
  padding: 0;
  text-align: left;
}

[data-sticky-container] {
  [data-sticky] {
    position: relative;
  }
}

.name-with-icon {
  &:hover > * {
    text-decoration: underline;
  }

  svg {
    margin-left: $space-6;
  }
}

